--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.2.3
+boto3==1.11.2
+botocore==1.14.2
 Django==3.0.2
+django-amazon-ses==2.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
+hashids==1.2.0
+jmespath==0.9.4
 psycopg2==2.8.4
 PyJWT==1.7.1
+python-dateutil==2.8.1
 pytz==2019.3
+s3transfer==0.3.0
 six==1.13.0
 sqlparse==0.3.0
-hashids
+urllib3==1.25.7
