--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     volumes:
       - .:/code
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: ["./wait-for.sh", "postgres-api-app:5432", "-t", "20", "--", "python3", "manage.py", "runserver", "0.0.0.0:8000"]
     ports:
       - 9060:8000
     networks:
