--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ asgiref==3.2.3
 attrs==19.3.0
 boto3==1.11.2
 botocore==1.14.2
+certifi==2020.6.20
+chardet==3.0.4
 Django==3.0.2
 django-amazon-ses==2.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 docutils==0.15.2
 hashids==1.2.0
+idna==2.10
 iniconfig==1.0.0
 jmespath==0.9.4
 more-itertools==8.4.0
@@ -21,6 +24,7 @@ pytest==6.0.0
 pytest-django==3.9.0
 python-dateutil==2.8.1
 pytz==2019.3
+requests==2.24.0
 s3transfer==0.3.0
 six==1.13.0
 sqlparse==0.3.0
