--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ certifi==2020.6.20
 chardet==3.0.4
 Django==3.0.2
 django-amazon-ses==2.1.1
+django-prometheus==2.1.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 docutils==0.15.2
+gunicorn==20.0.4
 hashids==1.2.0
 idna==2.10
 iniconfig==1.0.0
@@ -16,6 +18,7 @@ jmespath==0.9.4
 more-itertools==8.4.0
 packaging==20.4
 pluggy==0.13.1
+prometheus-client==0.8.0
 psycopg2==2.8.4
 py==1.9.0
 PyJWT==1.7.1
