--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.11.2
 botocore==1.14.2
 certifi==2020.6.20
 chardet==3.0.4
+coverage==5.2.1
 Django==3.0.2
 django-amazon-ses==2.1.1
 django-prometheus==2.1.0
