--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = api_app.settings
+DJANGO_SETTINGS_MODULE = api_app.test_settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -v --strict-markers
 markers =
