:sparkles: feat: Login/register with google account

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-prometheus==2.1.0
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
 docutils==0.15.2
+google_auth==1.30.0
 gunicorn==20.0.4
 hashids==1.2.0
 idna==2.10
